[tool.poetry]
name = "FacialExpreessionRecognition_EDAPrediction"
version = "0.1.0"
description = "Computer Vision Project"
authors = ["Elena Del Governatore eledelgo@gmail.com"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "3.10.9"
transformers = "^4.46.3"
numpy = "1.26.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
tqdm = "^4.67.1"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
pydrive = "^1.3.1"
seaborn = "^0.13.2"
pillow = "^11.0.0"
torch = "2.0.1"
torchvision = "0.15.2"
wandb = "^0.15.5"
scipy = "^1.11.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
